--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Methods for Adding CSS</title>
   </head>
   <body>
@@ -11,4 +12,4 @@
     <p>I would like to be styled with the internal method, please.</p>
     <button>Inline Method</button>
   </body>
-</html>
+</html> 
